@@ -12,7 +12,6 @@
 # ==============================================================================
 # 我的
 # ==============================================================================
-133.130.101.63    vps.i
 192.168.1.1       gate.home.i
 192.168.10.1      gete.nest.i
 # ==============================================================================
