@@ -10,14 +10,14 @@ icolor brightblue "def [0-9A-Z_]+"
 color brightcyan "\<(and|as|assert|break|class|continue|def|del|elif|else|except|exec|finally|for|from)\>"
 color brightcyan "\<(global|if|import|in|is|lambda|not|or|pass|print|raise|return|try|while|with|yield)\>"
 
-# Strings.
-color brightgreen "['][^']*[^\\][']" "[']{3}.*[^\\][']{3}"
-color brightgreen "["][^"]*[^\\]["]" "["]{3}.*[^\\]["]{3}"
+# Single-quoted strings.
+color brightgreen "'([^'\]|\\.)+'"
+color brightgreen ""([^"\]|\\.)+""
 # Comments.
 color brightred "(^|[[:blank:]])#.*$"
-# Multiline strings.
-color brightgreen start="\"\"\"[^"),]" end="(^|[^(])\"\"\""
-color brightgreen    start="'''[^'),]" end="(^|[^(])'''"
+# Triple-quoted strings.
+color brightgreen    start="'''[^'),]" end="(^|[^(\])'''"
+color brightgreen start="\"\"\"[^"),]" end="(^|[^(\])\"\"\""
 
 # Reminders.
 color ,yellow "(FIXME|TODO|XXX)"
