@@ -1,0 +1,2 @@
+tig 是一个用于查看git 库的交互式ncurses 程序。
+
