@@ -8,14 +8,18 @@
 # ==============================================================================
 # 默认shell
 # ==============================================================================
-set-option -g default-shell /bin/zsh
+set -g default-shell /bin/zsh
 
 # ==============================================================================
 # 鼠标滚动
 # ==============================================================================
 # >= version 2.1
 # ==============================================================================
-setw -g mouse on
+set -g mouse on
+bind -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+bind -t vi-copy WheelUpPane page-up
+bind -t vi-copy WheelDownPane page-down
 # ==============================================================================
 # < version 2.1
 # ==============================================================================
@@ -95,11 +99,9 @@ set -g status-right "%Y/%m/%d %H:%M:%S"
 set -g default-terminal "screen"
 
 # ==============================================================================
-# 滚屏和屏幕历史长度
+# 历史长度
 # ==============================================================================
 set -g history-limit 655360
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-setw -g mode-keys vi
 setw -g utf8 on
 
 # ==============================================================================
