@@ -11,6 +11,7 @@
 + 行尾空白字符高亮和一键去除
 + 一键查找文件中的光标所在单词
 + 内置Manual 手册，一键打开光标所在单词的Manual
++ XML 标签高亮和快速跳转
 + 自动的标准GNU 风格代码缩进
 + 缩进线、80 字符线、光标十字定位
 + 联通X11 程序的粘贴复制方式（Ctrl+C、Ctrl+V）
